# LLMSandbox

./: .gitignore
context_engineering/: main.py  openai-state0.py  openai-state1.py  openai-state2.py  openai-state3.py  openai-state4.py  openai-state5.py  openai-state6.py  pyproject.toml
context_engineering/archived/: openai-state5.py
deep_agents/: .gitignore  final_report.md  pyproject.toml  research_agent.py  simple_agent.py
langchain/langchain-exp1/: requirements.txt
langchain/langchain-exp1/src/: HelloEmbeddings.py  HelloLangchain.py  HelloLangchain2.py  HelloLangchain3.py  HelloPromptTemplate.py  LangchainAgent1.py
langgraph/: 0.hello.py  1.two_nodes.py  2.random_select.py  3.classify_email.py  4.save_graph_visualization.py  5.tool_calling.py  6.tool_calling2.py  install.sh
llamaindex/: .gitignore  install.sh  llama_agent6.py  llamaindex1.py  llamaindex2.py  llamaindex3.py  llamaindex4.py  llamaobserve5.py  llamaparse7.py
microabl/: dependency-reduced-pom.xml  pom.xml  run.sh
openai/: main.py  pyproject.toml
openai/1.simple/: openai-simple1.py  openai-simple2.py  openai-simple3.py
openai/2.prompting/: openai-prompting1.py  openai-prompting2.py
openai/3.convstate/: openai-state1.py  openai-state2.py  openai-state4.py
openai/4.structure/: openai-json1.py  openai-json2.py  openai-json3.py  openai-rdf1.py  openai-structured-pydantic1.py  openai-xml1.py
openai/5.functions/: openai-function1.py  openai-function2.py  openai-function3.py
prompting/: connecting.py
prompting/skeleton_of_thought/: sot1.py
(+1 files in other folders)
