[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.0.5",
    "dotenv>=0.9.9",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "openai>=1.107.1",
    "tavily-python>=0.7.12",
]
